--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
     font-weight: 500;
     font-size: 14px;
     line-height: 1.3;
-    background-color: var(--Very-light-grayish-blue);
+    background-color: #f9fafe;
     color: var(--Dark-grayish-blue);
 }
 
@@ -40,7 +40,7 @@ img{
 .notifications {
     background-color: var(--White);
     border-radius: 15px;
-    box-shadow: 1px 1px 10px 1px var(--Light-grayish-blue-1);
+    box-shadow: 10px 10px 30px -20px #ededed;
     padding: 16px;
     margin-block: 60px;
 }
